I did my best (now with last second comments)

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+<!--this was tough, but once I got the layout down with the sections, it became easier. However, the times it didn't do what I wanted were infuriating. 
+
 body
 	{padding: 0px;
 		margin: 0px;}
